update help documents (v1.16 and v1.17)

--- a/devel/help/00Index.html
+++ b/devel/help/00Index.html
@@ -6,7 +6,7 @@
 </head><body>
 <h1> Big Data Management of Whole-genome Sequence Variant Calls </h1>
 <hr/>
-<h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.13.6</h2>
+<h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.17.1</h2>
 <h2>Help Pages</h2>
 
 
@@ -47,6 +47,10 @@
 <td>Apply Functions Over Array Margins</td></tr>
 <tr><td style="width: 25%;"><a href="SeqArray-package.html">SeqArray</a></td>
 <td>Big Data Management of Whole-Genome Sequence Variant Calls</td></tr>
+<tr><td style="width: 25%;"><a href="seqAsVCF.html">seqAsVCF</a></td>
+<td>VariantAnnotation objects</td></tr>
+<tr><td style="width: 25%;"><a href="seqAsVCF.html">seqAsVCFInit</a></td>
+<td>VariantAnnotation objects</td></tr>
 <tr><td style="width: 25%;"><a href="seqBED2GDS.html">seqBED2GDS</a></td>
 <td>Convert PLINK BED Format to SeqArray Format</td></tr>
 <tr><td style="width: 25%;"><a href="seqBlockApply.html">seqBlockApply</a></td>
@@ -97,6 +101,8 @@
 <td>Set a Filter to Sample or Variant</td></tr>
 <tr><td style="width: 25%;"><a href="seqSetFilter.html">seqSetFilterChrom</a></td>
 <td>Set a Filter to Sample or Variant</td></tr>
+<tr><td style="width: 25%;"><a href="seqSetFilterCond.html">seqSetFilterCond</a></td>
+<td>Set a Filter to Variant with Allele Count/Freq</td></tr>
 <tr><td style="width: 25%;"><a href="seqSNP2GDS.html">seqSNP2GDS</a></td>
 <td>Convert SNPRelate Format to SeqArray Format</td></tr>
 <tr><td style="width: 25%;"><a href="seqStorageOption.html">seqStorageOption</a></td>
