--- a/devel/help/seqStorageOption.html
+++ b/devel/help/seqStorageOption.html
@@ -35,7 +35,8 @@ seqStorageOption(compression=c("ZIP_RA", "ZIP_RA.fast", "ZIP_RA.max",
 <tr valign="top"><td><code>mode</code></td>
 <td>
 <p>specify storage type for corresponding variable,
-e.g., 'annotation/info/HM'=&quot;int16&quot;</p>
+e.g., 'annotation/info/HM'=&quot;int16&quot;,
+'annotation/format/PL/data'=&quot;int&quot;</p>
 </td></tr>
 <tr valign="top"><td><code>float.mode</code></td>
 <td>
@@ -121,5 +122,5 @@ seqClose(f4)
 unlink(c("tmp1.gds", "tmp2.gds", "tmp3.gds", "tmp4.gds"))
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.6 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.17.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
