--- a/devel/help/seqVCF2GDS.html
+++ b/devel/help/seqVCF2GDS.html
@@ -16,7 +16,7 @@
 <h3>Usage</h3>
 
 <pre>
-seqVCF2GDS(vcf.fn, out.fn, header=NULL, storage.option="ZIP_RA",
+seqVCF2GDS(vcf.fn, out.fn, header=NULL, storage.option="LZMA_RA",
     info.import=NULL, fmt.import=NULL, genotype.var.name="GT",
     ignore.chr.prefix="chr", reference=NULL, start=1L, count=-1L,
     optimize=TRUE, raise.error=TRUE, digest=TRUE, parallel=FALSE,
@@ -178,10 +178,10 @@ The variant call format and VCFtools. Bioinformatics 27, 2156-2158.
 vcf.fn &lt;- seqExampleFileName("vcf")
 
 # conversion
-seqVCF2GDS(vcf.fn, "tmp.gds")
+seqVCF2GDS(vcf.fn, "tmp.gds", storage.option="ZIP_RA")
 
 # conversion in parallel
-seqVCF2GDS(vcf.fn, "tmp_p2.gds", parallel=2L)
+seqVCF2GDS(vcf.fn, "tmp_p2.gds", storage.option="ZIP_RA", parallel=2L)
 
 
 # display
@@ -191,7 +191,8 @@ seqClose(f)
 
 
 # convert without the INFO fields
-seqVCF2GDS(vcf.fn, "tmp.gds", info.import=character(0))
+seqVCF2GDS(vcf.fn, "tmp.gds", storage.option="ZIP_RA",
+    info.import=character(0))
 
 # display
 (f &lt;- seqOpen("tmp.gds"))
@@ -200,7 +201,8 @@ seqClose(f)
 
 
 # convert without the INFO and FORMAT fields
-seqVCF2GDS(vcf.fn, "tmp.gds", info.import=character(0), fmt.import=character(0))
+seqVCF2GDS(vcf.fn, "tmp.gds", storage.option="ZIP_RA",
+    info.import=character(0), fmt.import=character(0))
 
 # display
 (f &lt;- seqOpen("tmp.gds"))
@@ -211,5 +213,5 @@ seqClose(f)
 unlink(c("tmp.gds", "tmp_p2.gds"), force=TRUE)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.6 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.17.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
