--- a/release/help/00Index.html
+++ b/release/help/00Index.html
@@ -6,7 +6,7 @@
 </head><body>
 <h1> Big Data Management of Whole-genome Sequence Variant Calls </h1>
 <hr/>
-<h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.12.9</h2>
+<h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.16.0</h2>
 
 <h2>Help Pages</h2>
 
@@ -98,6 +98,8 @@
 <td>Set a Filter to Sample or Variant</td></tr>
 <tr><td style="width: 25%;"><a href="seqSetFilter.html">seqSetFilterChrom</a></td>
 <td>Set a Filter to Sample or Variant</td></tr>
+<tr><td style="width: 25%;"><a href="seqSetFilterCond.html">seqSetFilterCond</a></td>
+<td>Set a Filter to Variant with Allele Count/Freq</td></tr>
 <tr><td style="width: 25%;"><a href="seqSNP2GDS.html">seqSNP2GDS</a></td>
 <td>Convert SNPRelate Format to SeqArray Format</td></tr>
 <tr><td style="width: 25%;"><a href="seqStorageOption.html">seqStorageOption</a></td>
