--- a/devel/help/SeqArray-package.html
+++ b/devel/help/SeqArray-package.html
@@ -61,7 +61,7 @@ seqVCF_Header(vcf.fn)
 seqVCF_SampID(vcf.fn)
 
 # convert
-seqVCF2GDS(vcf.fn, "tmp.gds")
+seqVCF2GDS(vcf.fn, "tmp.gds", storage.option="ZIP_RA")
 seqSummary("tmp.gds")
 
 # list the structure of GDS variables
@@ -149,5 +149,5 @@ summary(af)
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.6 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.17.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
