--- a/devel/help/seqBED2GDS.html
+++ b/devel/help/seqBED2GDS.html
@@ -17,7 +17,7 @@
 
 <pre>
 seqBED2GDS(bed.fn, fam.fn, bim.fn, out.gdsfn,
-    compress.geno="ZIP_RA", compress.annotation="ZIP_RA",
+    compress.geno="LZMA_RA", compress.annotation="LZMA_RA",
     optimize=TRUE, digest=TRUE, verbose=TRUE)
 </pre>
 
@@ -107,5 +107,5 @@ seqSummary("tmp.gds")
 unlink("tmp.gds", force=TRUE)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.6 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.17.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
