--- a/devel/help/seqDelete.html
+++ b/devel/help/seqDelete.html
@@ -75,7 +75,7 @@ vcf.fn &lt;- seqExampleFileName("vcf")
 # or vcf.fn &lt;- "C:/YourFolder/Your_VCF_File.vcf"
 
 # convert
-seqVCF2GDS(vcf.fn, "tmp.gds")
+seqVCF2GDS(vcf.fn, "tmp.gds", storage.option="ZIP_RA")
 
 # display
 (f &lt;- seqOpen("tmp.gds", FALSE))
@@ -94,5 +94,5 @@ cleanup.gds("tmp.gds")
 unlink("tmp.gds", force=TRUE)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.6 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.17.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
