--- a/devel/help/seqGetData.html
+++ b/devel/help/seqGetData.html
@@ -33,7 +33,9 @@ seqGetData(gdsfile, var.name, .useraw=FALSE)
 </td></tr>
 <tr valign="top"><td><code>.useraw</code></td>
 <td>
-<p>use RAW instead of INTEGER for genotypes and dosages</p>
+<p><code>TRUE</code>, force to use RAW instead of INTEGER for
+genotypes and dosages; <code>FALSE</code>, use INTEGER; <code>NA</code>, use RAW
+for small numbers instead of INTEGER if possible</p>
 </td></tr>
 </table>
 
@@ -58,6 +60,11 @@ allele.
 </p>
 <p><code>"$num_allele"</code> returns an integer vector with the numbers of distinct
 alleles.
+</p>
+<p><code>"$ref"</code> returns a character vector of reference alleles
+</p>
+<p><code>"$alt"</code> returns a character vector of alternative alleles (delimited by
+comma)
 </p>
 
 
@@ -142,5 +149,5 @@ seqGetData(f, "annotation/format/DP")
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.6 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.17.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
