--- a/devel/help/seqMerge.html
+++ b/devel/help/seqMerge.html
@@ -16,7 +16,7 @@
 <h3>Usage</h3>
 
 <pre>
-seqMerge(gds.fn, out.fn, storage.option="ZIP_RA", info.var=NULL, fmt.var=NULL,
+seqMerge(gds.fn, out.fn, storage.option="LZMA_RA", info.var=NULL, fmt.var=NULL,
     samp.var=NULL, optimize=TRUE, digest=TRUE, verbose=TRUE)
 </pre>
 
@@ -35,9 +35,9 @@ seqMerge(gds.fn, out.fn, storage.option="ZIP_RA", info.var=NULL, fmt.var=NULL,
 <tr valign="top"><td><code>storage.option</code></td>
 <td>
 <p>specify the storage and compression option,
-&quot;ZIP_RA&quot; (<code><a href="seqStorageOption.html">seqStorageOption</a>("ZIP_RA")</code>) by default; or
+&quot;ZIP_RA&quot; (<code><a href="seqStorageOption.html">seqStorageOption</a>("ZIP_RA")</code>); or
 &quot;LZMA_RA&quot; to use LZMA compression algorithm with higher compression
-ratio</p>
+ratio (by default)</p>
 </td></tr>
 <tr valign="top"><td><code>info.var</code></td>
 <td>
@@ -126,10 +126,13 @@ fn &lt;- paste0("tmp", 1:split.cnt, ".gds")
 
 # convert to 5 gds files
 for (i in 1:split.cnt)
-    seqVCF2GDS(vcf.fn, fn[i], start=start[i], count=count[i])
+{
+    seqVCF2GDS(vcf.fn, fn[i], storage.option="ZIP_RA",
+        start=start[i], count=count[i])
+}
 
 # merge
-seqMerge(fn, "tmp.gds")
+seqMerge(fn, "tmp.gds", storage.option="ZIP_RA")
 seqSummary("tmp.gds")
 
 
@@ -145,7 +148,7 @@ add.gdsn(f, "sample.id", paste("S", 1:length(sid)), replace=TRUE)
 closefn.gds(f)
 
 # merging
-seqMerge(c(vcf.fn, "test.gds"), "output.gds")
+seqMerge(c(vcf.fn, "test.gds"), "output.gds", storage.option="ZIP_RA")
 
 
 
@@ -154,5 +157,5 @@ unlink(c("tmp.gds", "test.gds", "output.gds"), force=TRUE)
 unlink(fn, force=TRUE)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.6 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.17.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
