--- a/devel/help/seqOptimize.html
+++ b/devel/help/seqOptimize.html
@@ -81,7 +81,7 @@ size by up to 2X as genotype data and all format data are duplicated.
 # or vcf.fn &lt;- "C:/YourFolder/Your_VCF_File.vcf"
 
 # convert
-seqVCF2GDS(vcf.fn, "tmp.gds")
+seqVCF2GDS(vcf.fn, "tmp.gds", storage.option="ZIP_RA")
 
 # prepare data for the SeqVarTools package
 seqOptimize("tmp.gds", target="by.sample")
@@ -97,5 +97,5 @@ seqClose(f)
 unlink("tmp.gds")
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.6 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.17.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
