--- a/release/help/seqGetData.html
+++ b/release/help/seqGetData.html
@@ -33,7 +33,9 @@ seqGetData(gdsfile, var.name, .useraw=FALSE)
 </td></tr>
 <tr valign="top"><td><code>.useraw</code></td>
 <td>
-<p>use RAW instead of INTEGER for genotypes and dosages</p>
+<p><code>TRUE</code>, force to use RAW instead of INTEGER for
+genotypes and dosages; <code>FALSE</code>, use INTEGER; <code>NA</code>, use RAW
+for small numbers instead of INTEGER if possible</p>
 </td></tr>
 </table>
 
@@ -142,5 +144,5 @@ seqGetData(f, "annotation/format/DP")
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.12.9 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.16.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
